# riptide

./: .gitignore  ARCHITECTURE_REFACTOR.md  Cargo.toml  README.md  TODO_PROGRESSIVE_STREAMING_REDESIGN.md  clippy.toml  context.md  debug_streaming.py  fix_docs.py  reproduce_truncation.py  reproduce_truncation.rs  reproduce_truncation.sh  reproduce_truncation_issue.rs  rust-toolchain.toml  rustfmt.toml  test_streaming.sh  ui-prototype.html
riptide-cli/: Cargo.toml
riptide-cli/src/: commands.rs  main.rs  mod.rs
riptide-core/: Cargo.toml
riptide-core/src/: config.rs  lib.rs  local_movies.rs  mode.rs  server_components.rs  tracing_setup.rs  video.rs
riptide-core/src/engine/: actor.rs  commands.rs  core.rs  handle.rs  integration_tests.rs  mod.rs  streaming_integration_tests.rs  test_mocks.rs
riptide-core/src/network/: mod.rs  peer.rs  simulation.rs  token_bucket.rs
riptide-core/src/simulation/: deterministic.rs  magneto_provider.rs  mod.rs  scenarios.rs  tracker.rs
riptide-core/src/storage/: file_library.rs  file_storage.rs  mod.rs  test_fixtures.rs
riptide-core/src/streaming/: chunk_server.rs  direct_stream.rs  download_manager.rs  ffmpeg.rs  file_assembler.rs  file_reconstruction.rs  local_file_assembler.rs  media_info.rs  migration.rs  mod.rs  mp4_parser.rs  mp4_validation.rs  performance_tests.rs  piece_provider_adapter.rs  piece_reader.rs  progressive.rs  progressive_remuxing.rs  progressive_v2.md  range.rs  range_handler.rs  realtime_remuxer.rs  remux_stream.rs  remux_streaming.rs  remuxed_streaming.rs  simple.rs  storage_cache.rs  strategy.rs  strategy_manager.rs  stream_coordinator.rs  traits.rs
riptide-core/src/torrent/: creation.rs  downloader.rs  engine.rs  enhanced_peer_connection.rs  error_recovery.rs  integration_tests.rs  mod.rs  parsing.rs  peer_connection.rs  peer_manager.rs  peer_state.rs  peers.rs  piece_picker.rs  piece_store.rs  protocol.rs  simulated_peer_manager.rs  streaming_upload.rs  streaming_upload_manager.rs  test_data.rs  upload_rate_limiter.rs
riptide-core/src/transcoding/: mod.rs  segment_cache.rs  worker_pool.rs
riptide-core/tests/: container_format_test.rs  engine_integration_tests.rs  tidy.rs
riptide-search/: Cargo.toml
riptide-search/src/: enhanced_search.rs  errors.rs  lib.rs  metadata.rs  search.rs  service.rs  types.rs
riptide-search/src/providers/: demo.rs  development.rs  magneto.rs  mock.rs  mod.rs
riptide-sim/: Cargo.toml
riptide-sim/src/: content_aware_peer_manager.rs  coordination.rs  dev_peer_manager.rs  fast_dev_peer_manager.rs  lib.rs  magneto_provider.rs  media.rs  network.rs  peer.rs  peer_server.rs  piece_reconstruction.rs  piece_store.rs  scenarios.rs  sim_peer_manager.rs  simulated_peer_manager.rs  simulation_mode.rs  streaming_integration_tests.rs  tracker.rs  tracker_manager.rs  unified.rs
riptide-sim/src/deterministic/: clock.rs  events.rs  invariants.rs  mod.rs  resources.rs  simulation.rs  state.rs  tests.rs
riptide-sim/src/magneto_provider/: builder.rs  client.rs  content_database.rs  mod.rs  provider.rs
riptide-sim/src/media/: analysis.rs  mod.rs  results.rs  simulation.rs  types.rs
riptide-sim/src/peer_manager/: deterministic.rs  development.rs  mod.rs  piece_store.rs
riptide-sim/src/peers/: deterministic.rs  development.rs  mod.rs  piece_store.rs  simulated.rs
riptide-sim/src/scenarios/: builders.rs  mod.rs  runner.rs  streaming_edge_cases.rs  streaming_invariants.rs  types.rs
riptide-sim/src/streaming/: mock_piece_provider.rs  mod.rs  test_data.rs
riptide-sim/src/tracker/: builder.rs  mock.rs  mod.rs  simulated.rs  types.rs
riptide-tests/: Cargo.toml  integration.rs  style.rs
riptide-tests/disabled_integration/: peer_communication.rs  torrent_protocol.rs
riptide-tests/e2e/: mod.rs  streaming_workflow.rs
riptide-tests/integration/: avi_ffmpeg_duration_test.rs  debug_remux_test.rs  dev_simulation.rs  development_mode_debug.rs  engine_integration.rs  ffmpeg_validation_test.rs  mp4_validation.rs  naming_violations.rs  peer_communication.rs  progressive_remuxing_test.rs  progressive_streaming_broken_test.rs  progressive_streaming_test.rs  range_validation.rs  remux_pipeline.rs  sim_streaming_integration.rs  simple_streaming_test.rs  smart_header_footer_test.rs  streaming_integration.rs  style_enforcement.rs  test_remux.sh  test_streaming_http.py  torrent_integration.rs  torrent_protocol.rs  upload_rate_limiting.rs
riptide-tests/integration/progressive_streaming/: mod.rs
riptide-tests/style/: dead_code_enforcement.rs  mod.rs  naming_conventions.rs
riptide-web/: Cargo.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
riptide-web/scripts/: dev.sh
riptide-web/src/: handlers.rs  lib.rs  library.ts  main.ts  mod.rs  search.ts  server.rs  settings.ts  static_files.rs  templates.rs  torrents.ts
riptide-web/src/api/: client.ts
riptide-web/src/components/: activity.rs  dashboard.ts  layout.rs  mod.rs  stats.rs  torrent.rs  torrents.ts
riptide-web/src/handlers/: api.rs  htmx.rs  mod.rs  pages.rs  range.rs  streaming.rs  streaming_readiness.rs  utils.rs
riptide-web/src/htmx/: live_stats.rs  mod.rs  notifications.rs  torrent_actions.rs
riptide-web/src/pages/: dashboard.rs  library.rs  mod.rs  search.rs  torrents.rs
riptide-web/src/shared/: api-client.ts  types.ts
riptide-web/static/: index.html
riptide-web/templates/: add-torrent.html  base.html  dashboard.html  home.html  library.html  search.html  settings.html  torrents.html  video_player.html
riptide-web/types/: api.ts
tests/: Cargo.toml  browser_streaming_test.rs  container_format_test.rs  dev_simulation_test.rs  e2e_streaming_test.rs  end_to_end_streaming_test.rs  integration_tests.rs  message_flow_test.rs  mp4_validation_test.rs  progressive_streaming_integration_test.rs  progressive_streaming_test.rs  real_movie_streaming_test.rs  simple_download_test.rs  simulation.rs  simulation_integration.rs  streaming_integration_test.rs  tidy.rs  torrent_protocol_test.rs  trait_abstractions.rs  unified_streaming_test.rs
tests/integration/: simulation_test.rs  test_streaming_http.py
(+202 files in other folders)
