[package]
name = "riptide"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
thiserror = "2.0"
bytes = "1.8"
sha1 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
rand_chacha = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
url = "2.5"
async-trait = "0.1"

# Controlled external dependencies for trait abstractions
bencode-rs = { git = "https://github.com/mitander/bencode-rs" }
magnet-url = "3.0"
magneto = "0.1"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
tokio-test = "0.4"
proptest = "1.0"

[[bench]]
name = "performance"
harness = false
