[workspace]
resolver = "2"
members = [
    "riptide-core",
    "riptide-web",
    "riptide-search",
    "riptide-cli",
    "riptide-sim",
    "tests"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Riptide Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Network and HTTP
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
urlencoding = "2.1"

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
hyper = "1.0"
mime_guess = "2.0"

# BitTorrent-specific dependencies
bencode-rs = { git = "https://github.com/mitander/bencode-rs" }
magnet-url = "3.0"
magneto = "0.2"

# Cryptography and utilities
sha1 = "0.10"
hex = "0.4"
rand = "0.9"
rand_chacha = "0.9"
bytes = "1.8"

# Time and data structures
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
lru = "0.12"
regex = "1.0"

# CLI and configuration
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# FFmpeg integration
ffmpeg-next = "7.1"

# Development dependencies
tempfile = "3.0"
tokio-test = "0.4"
proptest = "1.0"
criterion = { version = "0.6", features = ["html_reports"] }
syn = { version = "2.0", features = ["full", "visit"] }


# Internal workspace dependencies
riptide-core = { path = "riptide-core" }
riptide-web = { path = "riptide-web" }
riptide-search = { path = "riptide-search" }
riptide-sim = { path = "riptide-sim" }
