[package]
name = "riptide-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core BitTorrent and streaming functionality for Riptide"
repository = "https://github.com/riptide-org/riptide"

[features]
default = []
simulation = ["rand_chacha"]
test-utils = []

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
axum = { workspace = true }
bencode-rs = { workspace = true }
magnet-url = { workspace = true }
magneto = { workspace = true }
num_cpus = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
lru = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ffmpeg-next = { workspace = true }
parking_lot = { workspace = true }
clap = { workspace = true }


# Optional simulation dependencies
rand_chacha = { workspace = true, optional = true }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
tempfile = { workspace = true }
tokio-test = { workspace = true }
proptest = { workspace = true }
