[package]
name = "riptide-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Media search and discovery for Riptide"

[dependencies]
riptide-core = { path = "../riptide-core" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
magneto = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
urlencoding = { workspace = true }