[package]
name = "riptide-tests"
version = "0.1.0"
edition = "2024"
authors = ["Riptide Contributors"]
license = "MIT OR Apache-2.0"
publish = false
description = "Integration and end-to-end tests for Riptide"

[dependencies]
# Workspace crates
riptide-core = { path = "../riptide-core", features = ["test-utils"] }
riptide-web = { path = "../riptide-web" }
riptide-search = { path = "../riptide-search" }
riptide-sim = { path = "../riptide-sim" }

# Core async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-test = "0.4"
futures = "0.3"
async-trait = "0.1"

# Testing utilities
tempfile = "3.0"
criterion = { version = "0.6", features = ["html_reports"] }
proptest = "1.0"

# HTTP client for integration tests
reqwest = { version = "0.12", features = ["json"] }
hyper = "1.0"
axum = { version = "0.8", features = ["macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
bytes = "1.8"
parking_lot = "0.12"

# BitTorrent-specific for integration tests
bencode-rs = { git = "https://github.com/mitander/bencode-rs" }
magnet-url = "3.0"
magneto = "0.2"
sha1 = "0.10"
hex = "0.4"

# File system and I/O
mime_guess = "2.0"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# FFmpeg integration for testing
ffmpeg-next = "7.1"

[[test]]
name = "integration"
path = "integration.rs"

[[test]]
name = "e2e"
path = "e2e/mod.rs"
