[package]
name = "riptide-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
words = "0.1"
tempfile = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
regex = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
riptide-core = { workspace = true }
riptide-web = { workspace = true }
riptide-sim = { workspace = true }
riptide-search = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
tower = { workspace = true }

[[test]]
name = "tidy"
path = "tidy.rs"

[[test]]
name = "simulation_integration"
path = "simulation_integration.rs"

[[test]]
name = "simple_download_test"
path = "simple_download_test.rs"

[[test]]
name = "message_flow_test"
path = "message_flow_test.rs"


[[test]]
name = "streaming_integration_test"
path = "streaming_integration_test.rs"
